[HERCULES-9159] - I18n titulo de proyecto de Autorizacion